--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -28,11 +28,17 @@ jobs:
       - name: upload artifacts
         uses: actions/upload-artifact@v3
         with: 
-          name: download-File
+          name: dist-File
           path: dist
   deploy:
     needs: build
     runs-on: ubuntu-latest
     steps:
+      - name: Download Artifacts
+        uses: actions/download-artifact@v3
+        with:
+          name: dist-File
+      - name: output contents 
+        run: ls
       - name: Deploy
         run: echo "Deploying..."
